// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphvizWasmAdapter: > computedAmazonView 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 281,
    "width": 931,
    "x": 0,
    "y": 0,
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "dotpos": "s,359.68,151.2 e,571.08,151.2 370.74,151.2 431.51,151.2 499.89,151.2 560.62,151.2",
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 413,
        "y": 128,
      },
      "parent": null,
      "points": [
        [
          371,
          151,
        ],
        [
          432,
          151,
        ],
        [
          500,
          151,
        ],
        [
          561,
          151,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon.s3",
    },
  ],
  "hash": "0e855f58163143eb9c45ac79127b7f60de4c5843",
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 265,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 43,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "position": [
        8,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 384,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labelBBox": {
        "height": 23,
        "width": 78,
        "x": 121,
        "y": 75,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        40,
        61,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 320,
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "height": 265,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 52,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "position": [
        539,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 384,
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "height": 180,
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 47,
        "width": 146,
        "x": 87,
        "y": 64,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        571,
        61,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "S3",
      "width": 320,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
}
`;

exports[`GraphvizWasmAdapter: > computedCloud3levels 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 943,
    "width": 1370,
    "x": 0,
    "y": 0,
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "dotpos": "e,229,326.24 229,179.96 229,222.11 229,272.59 229,315.95",
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 111,
        "x": 227,
        "y": 237,
      },
      "parent": null,
      "points": [
        [
          229,
          180,
        ],
        [
          229,
          222,
        ],
        [
          229,
          273,
        ],
        [
          229,
          316,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "dotpos": "e,662,326.24 662,179.96 662,222.11 662,272.59 662,315.95",
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 62,
        "x": 660,
        "y": 237,
      },
      "parent": null,
      "points": [
        [
          662,
          180,
        ],
        [
          662,
          222,
        ],
        [
          662,
          273,
        ],
        [
          662,
          316,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "dotpos": "e,354.16,674.87 555.92,505.86 496.53,555.61 422.47,617.65 361.86,668.42",
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with
sso authentification",
      "labelBBox": {
        "height": 34,
        "width": 239,
        "x": 481,
        "y": 566,
      },
      "parent": "cloud",
      "points": [
        [
          556,
          506,
        ],
        [
          497,
          556,
        ],
        [
          422,
          618,
        ],
        [
          362,
          668,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "dotpos": "e,243.13,674.87 233.87,505.86 236.52,554.29 239.81,614.37 242.55,664.36",
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 18,
        "width": 80,
        "x": 237,
        "y": 574,
      },
      "parent": "cloud",
      "points": [
        [
          234,
          506,
        ],
        [
          237,
          554,
        ],
        [
          240,
          614,
        ],
        [
          243,
          664,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "dotpos": "s,840.84,764.8 e,1050.4,764.8 851.84,764.8 912.22,764.8 979.91,764.8 1040,764.8",
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 892,
        "y": 742,
      },
      "parent": null,
      "points": [
        [
          852,
          765,
        ],
        [
          912,
          765,
        ],
        [
          980,
          765,
        ],
        [
          1040,
          765,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "tail": "odiamond",
      "target": "amazon",
    },
    {
      "dotpos": "e,517.26,764.8 407.94,764.8 440.97,764.8 473.99,764.8 507.02,764.8",
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labelBBox": null,
      "parent": "cloud.backend",
      "points": [
        [
          408,
          765,
        ],
        [
          441,
          765,
        ],
        [
          474,
          765,
        ],
        [
          507,
          765,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
  ],
  "hash": "ef8af4e4460173b1ee693ae331829f9793cbe2ae",
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 23,
        "width": 82,
        "x": 119,
        "y": 75,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        69,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 64,
        "width": 238,
        "x": 41,
        "y": 55,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        502,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 320,
    },
    {
      "children": [
        "cloud.frontend.dashboard",
        "cloud.frontend.adminPanel",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "height": 670,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 43,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "position": [
        8,
        265,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 912,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "height": 180,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 265,
        "x": 30,
        "y": 55,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        66,
        326,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
      "width": 325,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "height": 180,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 257,
        "x": 32,
        "y": 55,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        502,
        326,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
      "width": 320,
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 281,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 15,
        "width": 59,
        "x": 6,
        "y": 0,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "position": [
        48,
        614,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 832,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "height": 180,
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 254,
        "x": 33,
        "y": 55,
      },
      "level": 2,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        88,
        675,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Graphql API",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "height": 180,
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 262,
        "x": 30,
        "y": 55,
      },
      "level": 2,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        518,
        675,
      ],
      "shape": "storage",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 47,
        "width": 173,
        "x": 74,
        "y": 63,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "position": [
        1050,
        675,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 320,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`GraphvizWasmAdapter: > computedCloudView 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 554,
    "width": 1517,
    "x": 0,
    "y": 0,
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "dotpos": "e,316.12,326.24 219.05,179.96 247.37,222.64 281.37,273.87 310.38,317.6",
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 111,
        "x": 266,
        "y": 237,
      },
      "parent": null,
      "points": [
        [
          219,
          180,
        ],
        [
          247,
          223,
        ],
        [
          281,
          274,
        ],
        [
          310,
          318,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "dotpos": "e,433.92,326.24 530.99,179.96 502.67,222.64 468.67,273.87 439.66,317.6",
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 62,
        "x": 487,
        "y": 237,
      },
      "parent": null,
      "points": [
        [
          531,
          180,
        ],
        [
          503,
          223,
        ],
        [
          469,
          274,
        ],
        [
          440,
          318,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "dotpos": "e,666.05,416 534.98,416 574.12,416 616.15,416 655.76,416",
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 18,
        "width": 25,
        "x": 588,
        "y": 392,
      },
      "parent": "cloud",
      "points": [
        [
          535,
          416,
        ],
        [
          574,
          416,
        ],
        [
          616,
          416,
        ],
        [
          656,
          416,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "dotpos": "s,985.7,416 e,1197.1,416 996.76,416 1057.5,416 1125.9,416 1186.6,416",
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 1039,
        "y": 393,
      },
      "parent": null,
      "points": [
        [
          997,
          416,
        ],
        [
          1058,
          416,
        ],
        [
          1126,
          416,
        ],
        [
          1187,
          416,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon",
    },
  ],
  "hash": "ce579a71c5b48307612e44e36ab91b7b06a3a6f3",
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 23,
        "width": 82,
        "x": 119,
        "y": 75,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 64,
        "width": 238,
        "x": 41,
        "y": 55,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 320,
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 281,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 43,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "position": [
        175,
        265,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 851,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.frontend",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 23,
        "width": 80,
        "x": 120,
        "y": 75,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        215,
        326,
      ],
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Frontend",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 23,
        "width": 78,
        "x": 121,
        "y": 75,
      },
      "level": 1,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        666,
        326,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 48,
        "width": 173,
        "x": 74,
        "y": 63,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "position": [
        1197,
        326,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 320,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`GraphvizWasmAdapter: > computedIndexView 1`] = `
{
  "__": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 497,
    "width": 1066,
    "x": 0,
    "y": 0,
  },
  "customColorDefinitions": {},
  "description": null,
  "edges": [
    {
      "dotpos": "s,534.7,406.8 e,746.1,406.8 545.76,406.8 606.53,406.8 674.91,406.8 735.64,406.8",
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 588,
        "y": 384,
      },
      "parent": null,
      "points": [
        [
          546,
          407,
        ],
        [
          607,
          407,
        ],
        [
          675,
          407,
        ],
        [
          736,
          407,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "tail": "odiamond",
      "target": "amazon",
    },
    {
      "dotpos": "e,314.24,316.8 220.77,179.95 248.07,219.92 280.37,267.21 308.34,308.16",
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 111,
        "x": 266,
        "y": 237,
      },
      "parent": null,
      "points": [
        [
          221,
          180,
        ],
        [
          248,
          220,
        ],
        [
          280,
          267,
        ],
        [
          308,
          308,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "dotpos": "e,435.8,316.8 529.27,179.95 501.97,219.92 469.67,267.21 441.7,308.16",
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 62,
        "x": 481,
        "y": 237,
      },
      "parent": null,
      "points": [
        [
          529,
          180,
        ],
        [
          502,
          220,
        ],
        [
          470,
          267,
        ],
        [
          442,
          308,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
  ],
  "hash": "4923fc4c18d9538671bf4a81642d46b9698a2e3d",
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 23,
        "width": 82,
        "x": 119,
        "y": 75,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 64,
        "width": 238,
        "x": 41,
        "y": 55,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud",
      "inEdges": [
        "customer:cloud",
        "support:cloud",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 23,
        "width": 49,
        "x": 135,
        "y": 75,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        215,
        317,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 320,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 47,
        "width": 173,
        "x": 74,
        "y": 63,
      },
      "level": 0,
      "links": null,
      "modelRef": 1,
      "outEdges": [],
      "parent": null,
      "position": [
        746,
        317,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 320,
    },
  ],
  "tags": null,
  "title": "",
}
`;
